form registro hecho y creación en BD

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "noahbuscher/macaw": "dev-master",
         "victorjfg/dawfony": "dev-master",
-        "twbs/bootstrap": "dev-master"
+        "twbs/bootstrap": "4.4.1"
     },
     "authors": [
         {
